--- a/assets/blocks/image.css
+++ b/assets/blocks/image.css
@@ -20,34 +20,34 @@
 
 /* Block Style: Caption right/left
 --------------------------------------------- */
-@media (min-width: 1350px) {
-    .is-style-caption-left,
-    .is-style-caption-right {
+@media (min-width: 1440px) {
+    .wp-block-image.is-style-caption-left,
+    .wp-block-image.is-style-caption-right {
         position: relative;
     }
 
-    .is-style-caption-left > figcaption,
-    .is-style-caption-right > figcaption {
+    .wp-block-image.is-style-caption-left > figcaption,
+    .wp-block-image.is-style-caption-right > figcaption {
         bottom: var(--wp--style--block-gap);
-        max-width: 14rem;
+        max-width: 13rem;
         position: absolute;
         width: 100%;
     }
 
-    .is-style-caption-right > figcaption {
-        right: calc(-14rem - var(--wp--style--block-gap));
+    .wp-block-image.is-style-caption-right > figcaption {
+        right: calc(-13rem - var(--wp--style--block-gap));
         text-align: left;
     }
 
-    .is-style-caption-left > figcaption {
-        left: calc(-14rem - var(--wp--style--block-gap));
+    .wp-block-image.is-style-caption-left > figcaption {
+        left: calc(-13rem - var(--wp--style--block-gap));
         text-align: right;
     }
 
-    [data-align="full"] > .is-style-caption-right > figcaption,
-    .alignfull.is-style-caption-right > figcaption,
-    [data-align="full"] > .is-style-caption-left > figcaption,
-    .alignfull.is-style-caption-left > figcaption {
+    [data-align="full"] > .wp-block-image.is-style-caption-right > figcaption,
+    .wp-block-image.alignfull.is-style-caption-right > figcaption,
+    [data-align="full"] > .wp-block-image.is-style-caption-left > figcaption,
+    .wp-block-image.alignfull.is-style-caption-left > figcaption {
         max-width: unset;
         padding-left: var(--wp--style--block-gap);
         padding-right: var(--wp--style--block-gap);
@@ -55,8 +55,8 @@
         text-align: left;
     }
 
-    [data-align="full"] > .is-style-caption-right > figcaption,
-    .alignfull.is-style-caption-right > figcaption {
+    [data-align="full"] > .wp-block-image.is-style-caption-right > figcaption,
+    .wp-block-image.alignfull.is-style-caption-right > figcaption {
         text-align: right;
     }
 }
