--- a/templates/single.html
+++ b/templates/single.html
@@ -1,75 +1,94 @@
 <!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"right":"var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dsmall, 1.25rem)","left":"var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dsmall, 1.25rem)","top":"3rem"}}},"layout":{"inherit":true}} -->
-<main class="wp-block-group" style="padding-top:3rem;padding-right:var(--wp--custom--spacing--small, 1.25rem);padding-left:var(--wp--custom--spacing--small, 1.25rem)"><!-- wp:group {"style":{"spacing":{"blockGap":"0.75rem"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
-<div class="wp-block-group"><!-- wp:post-author-name {"style":{"typography":{"fontStyle":"normal","fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}},"textColor":"tertiary","fontSize":"tiny"} /-->
+<!-- wp:group {"tagName":"main"} -->
+<main class="wp-block-group">
 
-<!-- wp:paragraph {"textColor":"borders","fontSize":"tiny","fontFamily":"source-sans"} -->
-<p class="has-borders-color has-tiny-font-size has-source-sans-font-family">|</p>
-<!-- /wp:paragraph -->
+<!-- wp:group {"layout":{"contentSize": "720px","wideSize": "960px"},"style":{"spacing":{"blockGap":"3rem","margin":{"top":"4rem","bottom":"3rem"}}}} -->
+<div class="wp-block-group" style="margin-top:4rem;margin-bottom:3rem">
 
-<!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontStyle":"normal","fontWeight":"500","lineHeight":"1"}},"textColor":"tertiary","className":"no-flex-shrink","fontSize":"tiny"} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:post-title {"level":1,"style":{"spacing":{"margin":{"bottom":"var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dsmall, 2rem)"}}}} /-->
-
-<!-- wp:post-featured-image {"style":{"color":{"duotone":["#0C1C31","#f9f9f9"]},"spacing":{"margin":{"bottom":"3rem"}}}} /-->
-
-<!-- wp:post-content {"layout":{"inherit":true}} /-->
-
-<!-- wp:spacer {"height":"1rem"} -->
-<div style="height:1rem" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
-
-<!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
-<div class="wp-block-group"><!-- wp:post-terms {"term":"category","className":"is-style-outline","separator":""} /-->
-
-<!-- wp:post-terms {"term":"post_tag","separator":" | "} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:spacer {"height":"3rem"} -->
-<div style="height:3rem" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
-
-<!-- wp:heading {"level":3} -->
-<h3 id="post-comments">Comments</h3>
-<!-- /wp:heading -->
-
-<!-- wp:comment-template -->
-<!-- wp:group {"style":{"border":{"style":"solid","width":"1px","radius":"4px"},"spacing":{"blockGap":"1rem","padding":{"top":"2rem","right":"2rem","bottom":"2rem","left":"2rem"}}},"borderColor":"borders"} -->
-<div class="wp-block-group has-border-color has-borders-border-color" style="border-radius:4px;border-style:solid;border-width:1px;padding-top:2rem;padding-right:2rem;padding-bottom:2rem;padding-left:2rem">
-    <!-- wp:group {"layout":{"type":"flex","allowOrientation":false},"style":{"spacing":{"blockGap":"1rem"}}} -->
+    <!-- wp:group -->
     <div class="wp-block-group">
-        <!-- wp:comment-author-avatar {"width":50,"height":50,"style":{"border":{"radius":"100px","style":"solid","width":"1px"}},"borderColor":"borders"} /-->
-        <!-- wp:group {"style":{"spacing":{"blockGap":"0px","padding":{"bottom":"1rem"}}}} -->
-        <div class="wp-block-group" style="padding-bottom:1rem">
-            <!-- wp:comment-author-name {"style":{"typography":{"fontWeight":"500"}}} /-->
-            <!-- wp:group {"layout":{"type":"flex","allowOrientation":false},"style":{"spacing":{"blockGap":"0.5rem"}}} -->
-            <div class="wp-block-group">
-                <!-- wp:comment-date {"style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}},"textColor":"tertiary","fontSize":"tiny"} /-->
-                <!-- wp:comment-edit-link {"style":{"typography":{"lineHeight":"1"}},"fontSize":"tiny"} /-->
-            </div>
-            <!-- /wp:group -->
+
+        <!-- wp:group {"style":{"spacing":{"blockGap":"0.75rem"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
+        <div class="wp-block-group">
+            <!-- wp:post-terms {"term":"category","fontSize":"tiny","style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}}} /-->
+            <!-- wp:paragraph {"textColor":"borders","fontSize":"tiny","fontFamily":"source-sans"} -->
+            <p class="has-borders-color has-tiny-font-size has-source-sans-font-family">|</p>
+            <!-- /wp:paragraph -->
+
+            <!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"tertiary","className":"no-flex-shrink","fontSize":"tiny"} /-->
         </div>
         <!-- /wp:group -->
+
+        <!-- wp:post-title {"level":1} /-->
+
     </div>
     <!-- /wp:group -->
-    <!-- wp:comment-content {"fontFamily":"source-serif"} /-->
-    <!-- wp:comment-reply-link /-->
+
+    <!-- wp:post-featured-image {"align":"wide"} /-->
+
 </div>
 <!-- /wp:group -->
 
-<!-- wp:spacer {"height":"2rem"} -->
-<div style="height:2rem" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
+<!-- wp:post-content {"layout":{"contentSize": "720px","wideSize": "960px"}} /-->
 
-<!-- /wp:comment-template -->
-<!-- wp:post-comments-form /-->
-</main>
+<!-- wp:group {"layout":{"inherit":true},"style":{"spacing":{"margin":{"top":"3rem","bottom":"2rem"}}}} -->
+<div class="wp-block-group" style="margin-top:3rem;margin-bottom:3rem">
+
+    <!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
+    <div class="wp-block-group">
+        <!-- wp:post-terms {"term":"category","className":"is-style-outline","separator":"","fontSize":"tiny"} /-->
+        <!-- wp:post-terms {"term":"post_tag","separator":"   |   ","fontSize":"tiny"} /-->
+    </div>
+    <!-- /wp:group -->
+
+</div>
 <!-- /wp:group -->
 
-<!-- wp:spacer {"height":32} -->
-<div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
+<!-- wp:group {"layout":{"inherit":true}} -->
+<div class="wp-block-group">
+
+    <!-- wp:heading {"level":3} -->
+    <h3 id="post-comments">Comments</h3>
+    <!-- /wp:heading -->
+
+    <!-- wp:comment-template -->
+
+        <!-- wp:group {"style":{"border":{"style":"solid","width":"1px","radius":"4px"},"spacing":{"blockGap":"1rem","padding":{"top":"2rem","right":"2rem","bottom":"2rem","left":"2rem"}}},"borderColor":"borders"} -->
+        <div class="wp-block-group has-border-color has-borders-border-color" style="border-radius:4px;border-style:solid;border-width:1px;padding-top:2rem;padding-right:2rem;padding-bottom:2rem;padding-left:2rem">
+            <!-- wp:group {"layout":{"type":"flex","allowOrientation":false},"style":{"spacing":{"blockGap":"1rem"}}} -->
+            <div class="wp-block-group">
+                <!-- wp:comment-author-avatar {"width":50,"height":50,"style":{"border":{"radius":"100px","style":"solid","width":"1px"}},"borderColor":"borders"} /-->
+                <!-- wp:group {"style":{"spacing":{"blockGap":"0px","padding":{"bottom":"1rem"}}}} -->
+                <div class="wp-block-group" style="padding-bottom:1rem">
+                    <!-- wp:comment-author-name {"style":{"typography":{"fontWeight":"500"}}} /-->
+                    <!-- wp:group {"layout":{"type":"flex","allowOrientation":false},"style":{"spacing":{"blockGap":"0.5rem"}}} -->
+                    <div class="wp-block-group">
+                        <!-- wp:comment-date {"style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}},"textColor":"tertiary","fontSize":"tiny"} /-->
+                        <!-- wp:comment-edit-link {"style":{"typography":{"lineHeight":"1"}},"fontSize":"tiny"} /-->
+                    </div>
+                    <!-- /wp:group -->
+                </div>
+                <!-- /wp:group -->
+            </div>
+            <!-- /wp:group -->
+            <!-- wp:comment-content {"fontFamily":"source-serif"} /-->
+            <!-- wp:comment-reply-link /-->
+        </div>
+        <!-- /wp:group -->
+
+        <!-- wp:spacer {"height":"2rem"} -->
+        <div style="height:2rem" aria-hidden="true" class="wp-block-spacer"></div>
+        <!-- /wp:spacer -->
+
+    <!-- /wp:comment-template -->
+
+    <!-- wp:post-comments-form /-->
+
+</div>
+<!-- /wp:group -->
+
+</main>
+<!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer","style":{"spacing":{"padding":{"top":"var(--wp--custom--spacing--large, 8rem)","right":"var(--wp--custom--spacing--small, 1.25rem)","left":"var(--wp--custom--spacing--small, 1.25rem)"}}},"layout":{"inherit":true}} /-->
