--- a/style.css
+++ b/style.css
@@ -215,3 +215,49 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 	padding-right: var(--wp--custom--spacing--outer);
 	padding-left: var(--wp--custom--spacing--outer);
 }
+
+/*
+ * Utility styles.
+ * A couple utilities that are used throughout patterns and parts
+ * where core does not support these functionalities.
+ */
+
+.my-0 {
+	margin-bottom: 0 !important;
+	margin-top: 0 !important;
+}
+
+.mt-0 {
+        margin-top: 0 !important;
+}
+
+.mt-0 .wp-block-post-template {
+        margin-top: 0 !important;
+}
+
+.items-start {
+	align-items: flex-start !important;
+}
+
+.relative {
+        position: relative;
+}
+
+@media (min-width: 781px) {
+	.hide-on-desktop {
+		display: none !important;
+	}
+}
+
+@media (max-width: 782px) {
+	.hide-on-tablet {
+		display: none !important;
+	}
+}
+
+
+@media (max-width: 599px) {
+	.hide-on-mobile {
+		display: none !important;
+	}
+}
