--- a/templates/page.html
+++ b/templates/page.html
@@ -1,9 +1,9 @@
 <!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
 
-<!-- wp:group {"tagName":"main"} -->
-<main class="wp-block-group">
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
+<main class="wp-block-group" style="margin-top:0">
 
-    <!-- wp:group {"layout":{"inherit":true},"style":{"spacing":{"blockGap":"3rem","margin":{"top":"4rem","bottom":"3rem"}}}} -->
+    <!-- wp:group {"layout":{"contentSize": "720px","wideSize": "960px"},"style":{"spacing":{"blockGap":"3rem","margin":{"top":"4rem","bottom":"3rem"}}}} -->
     <div class="wp-block-group" style="margin-top:4rem;margin-bottom:3rem">
 
         <!-- wp:post-title {"level":1} /-->
